# cuopt

./: CONTRIBUTING.md  GRPC_INTERFACE.md  GRPC_QUICK_START.md  GRPC_SERVER_ARCHITECTURE.md  RELEASE-NOTES.md  build.sh  dependencies.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  numerical_instability.md
benchmarks/linear_programming/cuopt/: run_mip.cpp
ci/: build_wheel_libcuopt.sh
ci/utils/: install_protobuf_grpc.sh
conda/environments/: all_cuda-129_arch-aarch64.yaml  all_cuda-129_arch-x86_64.yaml  all_cuda-131_arch-aarch64.yaml  all_cuda-131_arch-x86_64.yaml
conda/recipes/libcuopt/: recipe.yaml
cpp/: CMakeLists.txt  cuopt_cli.cpp
cpp/include/cuopt/linear_programming/: constants.h  cpu_optimization_problem_solution.hpp  optimization_problem_solution.hpp  optimization_problem_solution_interface.hpp  solve_remote.hpp
cpp/include/cuopt/linear_programming/mip/: solver_settings.hpp  solver_solution.hpp
cpp/include/cuopt/linear_programming/pdlp/: solver_settings.hpp  solver_solution.hpp
cpp/include/cuopt/linear_programming/utilities/: cython_types.hpp
cpp/src/barrier/: barrier.cu
cpp/src/branch_and_bound/: branch_and_bound.cpp  branch_and_bound.hpp  pseudo_costs.cpp  pseudo_costs.hpp
cpp/src/cuts/: cuts.cpp  cuts.hpp
cpp/src/dual_simplex/: crossover.cpp  phase2.cpp  phase2.hpp  right_looking_lu.cpp  simplex_solver_settings.hpp  solution.hpp  sparse_matrix.cpp  sparse_matrix.hpp
cpp/src/grpc/: cuopt_remote.proto  cuopt_remote_service.proto  grpc_problem_mapper.cpp  grpc_problem_mapper.hpp  grpc_service_mapper.cpp  grpc_service_mapper.hpp  grpc_settings_mapper.cpp  grpc_settings_mapper.hpp  grpc_solution_mapper.cpp  grpc_solution_mapper.hpp
cpp/src/grpc/client/: grpc_client.cpp  grpc_client.hpp  solve_remote.cpp
cpp/src/grpc/server/: grpc_field_element_size.hpp  grpc_incumbent_proto.hpp  grpc_job_management.cpp  grpc_pipe_io.cpp  grpc_pipe_serialization.hpp  grpc_server_logger.cpp  grpc_server_logger.hpp  grpc_server_main.cpp  grpc_server_threads.cpp  grpc_server_types.hpp  grpc_service_impl.cpp  grpc_worker.cpp  grpc_worker_infra.cpp
cpp/src/math_optimization/: solver_settings.cu
cpp/src/mip_heuristics/: CMakeLists.txt  early_heuristic.cuh  solve.cu  solver.cu  solver_context.cuh  solver_solution.cu  utils.cuh
cpp/src/mip_heuristics/diversity/: diversity_manager.cu  diversity_manager.cuh  population.cuh
cpp/src/mip_heuristics/diversity/lns/: rins.cu
cpp/src/mip_heuristics/diversity/recombiners/: sub_mip.cuh
cpp/src/mip_heuristics/local_search/: local_search.cu
cpp/src/mip_heuristics/presolve/: probing_cache.cu  probing_cache.cuh  third_party_presolve.cpp
cpp/src/mip_heuristics/presolve/conflict_graph/: clique_table.cu  clique_table.cuh
cpp/src/mip_heuristics/problem/: problem.cu  problem.cuh
cpp/src/mip_heuristics/solution/: solution.cu
cpp/src/pdlp/: CMakeLists.txt  cpu_optimization_problem.cpp  optimization_problem.cu  pdlp.cu  solution_conversion.cu  solve.cu  solver_solution.cu
cpp/src/pdlp/termination_strategy/: termination_strategy.cu
cpp/src/routing/ges/lexicographic_search/: lexicographic_search.cu
cpp/tests/linear_programming/: CMakeLists.txt  pdlp_test.cu
cpp/tests/linear_programming/c_api_tests/: c_api_test.c  c_api_tests.cpp
cpp/tests/linear_programming/grpc/: CMakeLists.txt  grpc_client_test.cpp  grpc_client_test_helper.hpp  grpc_integration_test.cpp  grpc_pipe_serialization_test.cpp  grpc_test_log_capture.hpp
cpp/tests/linear_programming/unit_tests/: solution_interface_test.cu
cpp/tests/mip/: cuts_test.cu  determinism_test.cu  incumbent_callback_test.cu  problem_test.cu
cpp/tests/routing/unit_tests/: breaks.cu  heterogenous_breaks.cu
cpp/tests/routing/utilities/: check_constraints.cu  test_utilities.hpp
datasets/mip/: download_miplib_test_dataset.sh
docs/cuopt/source/: conf.py  index.rst  install.rst
docs/cuopt/source/_static/: install-selector.css  install-selector.js
docs/cuopt/source/cuopt-c/: quick-start.rst
docs/cuopt/source/cuopt-c/lp-qp-milp/examples/: milp_mps_example.c  mps_file_example.c  simple_lp_example.c  simple_milp_example.c  simple_qp_example.c
docs/cuopt/source/cuopt-cli/: quick-start.rst
docs/cuopt/source/cuopt-python/: quick-start.rst
docs/cuopt/source/cuopt-server/: quick-start.rst
docs/cuopt/source/cuopt-server/examples/: milp-examples.rst
docs/cuopt/source/cuopt-server/examples/milp/examples/: incumbent_callback_example.py
python/cuopt/cuopt/linear_programming/solution/: solution.py
python/cuopt/cuopt/linear_programming/solver/: solver.pxd  solver_wrapper.pyx
python/cuopt/cuopt/linear_programming/solver_settings/: solver_settings.py
python/cuopt/cuopt/routing/: vehicle_routing_wrapper.pyx
python/cuopt/cuopt/tests/linear_programming/: test_cpu_only_execution.py  test_incumbent_callbacks.py  test_lp_solver.py  test_python_API.py
python/cuopt/cuopt/tests/routing/: API_COVERAGE.md  test_data_model.py  test_initial_solutions.py  test_solver.py  test_solver_settings.py  test_vehicle_properties.py  test_warnings_exceptions.py
python/cuopt_self_hosted/cuopt_sh_client/: cuopt_self_host_client.py  thin_client_solution.py
python/cuopt_server/cuopt_server/: webserver.py
python/cuopt_server/cuopt_server/tests/: test_incumbents.py  test_set_fleet_data.py
python/cuopt_server/cuopt_server/utils/linear_programming/: data_definition.py  solver.py
python/cuopt_server/cuopt_server/utils/routing/: data_definition.py  validation_fleet_data.py
python/libcuopt/: CMakeLists.txt
